[gd_scene load_steps=5 format=3 uid="uid://bkki3fryl3aig"]

[ext_resource type="Script" path="res://scripts/projectiles/bullet.gd" id="1_dte3h"]
[ext_resource type="Material" uid="uid://cimhmqlj16qqv" path="res://assets/shaders/smooth_pixel.tres" id="2_251tp"]
[ext_resource type="Texture2D" uid="uid://digfqh1yt2x4p" path="res://assets/projectiles/bullet.png" id="3_d8xmn"]
[ext_resource type="PackedScene" uid="uid://3miicp8y7p5b" path="res://scenes/shared/multi_hitbox.tscn" id="4_1pqyx"]

[node name="Bullet" type="Node2D"]
z_index = 1
script = ExtResource("1_dte3h")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture_filter = 2
material = ExtResource("2_251tp")
position = Vector2(5, -1)
texture = ExtResource("3_d8xmn")

[node name="MultiHitbox" parent="." instance=ExtResource("4_1pqyx")]
position = Vector2(1.5718, -23.2764)
collision_mask = 6
count = 2

[node name="CollisionPolygon2D" parent="MultiHitbox" index="0"]
polygon = PackedVector2Array(-3.5718, 21.2764, -3.5718, 22.2764, -4.5718, 22.2764, -4.5718, 24.2764, -3.5718, 24.2764, -3.5718, 25.2764, 2.4282, 25.2764, 2.4282, 24.2764, 4.4282, 24.2764, 4.4282, 22.2764, 2.4282, 22.2764, 2.4282, 21.2764)

[node name="SelfDestructTimer" type="Timer" parent="."]
autostart = true

[connection signal="self_destruct" from="MultiHitbox" to="." method="_on_multi_hitbox_self_destruct"]
[connection signal="timeout" from="SelfDestructTimer" to="." method="_on_self_destruct_timer_timeout"]

[editable path="MultiHitbox"]
